Laboratories/Lab_3/ex_3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    nl
    ws

Grammar

Rule 0     S' -> prog_ok
Rule 1     prog_ok -> dec_prot_list function_list
Rule 2     prog_ok -> function_list
Rule 3     dec_prot_list -> dec_prot_list dec_prot
Rule 4     dec_prot_list -> dec_prot
Rule 5     dec_prot -> decl
Rule 6     dec_prot -> function_prot
Rule 7     function_list -> function
Rule 8     function_list -> function_list function
Rule 9     function_decl -> type pointer RBOPEN parameter_list RBCLOSED
Rule 10    function_decl -> void ID RBOPEN parameter_list RBCLOSED
Rule 11    function_decl -> STORAGE_SPEC type pointer RBOPEN parameter_list RBCLOSED
Rule 12    function_decl -> STORAGE_SPEC void ID RBOPEN parameter_list RBCLOSED
Rule 13    function_prot -> function_decl SEMICOLON
Rule 14    function -> function_decl CBOPEN function_body CBCLOSED
Rule 15    function_body -> empty
Rule 16    function_body -> decl_list stmt_list
Rule 17    parameter_list -> parameter_list COMMA parameter
Rule 18    parameter_list -> parameter
Rule 19    parameter_list -> void
Rule 20    parameter -> type pointer
Rule 21    parameter -> type pointer SBOPEN SBCLOSED
Rule 22    decl_list -> decl
Rule 23    decl_list -> decl_list decl
Rule 24    decl -> type id_list SEMICOLON
Rule 25    decl -> STORAGE_SPEC type id_list SEMICOLON
Rule 26    id_list -> id_list COMMA ident
Rule 27    id_list -> ident
Rule 28    ident -> pointer
Rule 29    ident -> pointer SBOPEN CONST SBCLOSED
Rule 30    ident -> pointer EQUALS CONST
Rule 31    ident -> pointer EQUALS MINUS CONST
Rule 32    ident -> pointer SBOPEN SBCLOSED EQUALS CBOPEN const_list CBCLOSED
Rule 33    ident -> pointer SBOPEN SBCLOSED EQUALS CBOPEN string_const_list CBCLOSED
Rule 34    pointer -> TIMES pointer
Rule 35    pointer -> ID
Rule 36    const_list -> const_list COMMA CONST
Rule 37    const_list -> CONST
Rule 38    string_const_list -> string_const_list COMMA STRINGCONST
Rule 39    string_const_list -> STRINGCONST
Rule 40    void -> VOID
Rule 41    void -> empty
Rule 42    type -> SIGN_MODIFIER TYPE
Rule 43    type -> LENG_MODIFIER TYPE
Rule 44    type -> SIGN_MODIFIER LENG_MODIFIER TYPE
Rule 45    type -> LENG_MODIFIER
Rule 46    type -> TYPE
Rule 47    stmt_list -> stmts
Rule 48    stmt_list -> empty
Rule 49    stmts -> stmts stmt
Rule 50    stmts -> stmt
Rule 51    block -> CBOPEN stmt_list CBCLOSED
Rule 52    stmt -> assign_stmt SEMICOLON
Rule 53    stmt -> if_stmt
Rule 54    stmt -> while_stmt
Rule 55    stmt -> block
Rule 56    stmt -> BREAK SEMICOLON
Rule 57    stmt -> return_stmt SEMICOLON
Rule 58    stmt -> for_stmt
Rule 59    stmt -> switch_stmt
Rule 60    stmt -> SEMICOLON
Rule 61    assign_stmt -> ID EQUALS expr
Rule 62    assign_stmt -> ID ASSOP expr
Rule 63    assign_stmt -> expr
Rule 64    term -> ID
Rule 65    term -> CONST
Rule 66    term -> ID RBOPEN arg_list RBCLOSED
Rule 67    term -> ID SBOPEN CONST SBCLOSED
Rule 68    term -> ID SBOPEN ID SBCLOSED
Rule 69    arg_list -> args
Rule 70    arg_list -> empty
Rule 71    args -> args COMMA arg
Rule 72    args -> arg
Rule 73    arg -> term
Rule 74    arg -> STRINGCONST
Rule 75    expr -> expr PLUS expr
Rule 76    expr -> expr MINUS expr
Rule 77    expr -> expr DIVIDE expr
Rule 78    expr -> expr TIMES expr
Rule 79    expr -> expr MOD expr
Rule 80    expr -> expr INCR
Rule 81    expr -> INCR expr
Rule 82    expr -> expr DECR
Rule 83    expr -> DECR expr
Rule 84    expr -> RBOPEN expr RBCLOSED
Rule 85    expr -> MINUS expr
Rule 86    expr -> PLUS expr
Rule 87    expr -> term
Rule 88    if_stmt -> IF RBOPEN cond RBCLOSED stmt
Rule 89    if_stmt -> IF RBOPEN cond RBCLOSED stmt ELSE stmt
Rule 90    cond -> cond LOGOP cond
Rule 91    cond -> RBOPEN cond RBCLOSED
Rule 92    cond -> comparison
Rule 93    cond -> expr
Rule 94    comparison -> expr RELOP expr
Rule 95    while_stmt -> WHILE RBOPEN cond RBCLOSED stmt
Rule 96    for_stmt -> FOR RBOPEN expr_list SEMICOLON cond SEMICOLON expr_list RBCLOSED stmt
Rule 97    expr_list -> expr_list COMMA assign_stmt
Rule 98    expr_list -> assign_stmt
Rule 99    return_stmt -> RETURN expr
Rule 100   return_stmt -> RETURN
Rule 101   switch_stmt -> SWITCH RBOPEN ID RBCLOSED CBOPEN case_list CBCLOSED
Rule 102   switch_stmt -> SWITCH RBOPEN ID RBCLOSED CBOPEN case_list default_stmt CBCLOSED
Rule 103   case_list -> case_list case_stmt
Rule 104   case_list -> case_stmt
Rule 105   case_stmt -> CASE CONST COLON stmt_list
Rule 106   default_stmt -> DEFAULT COLON stmt_list
Rule 107   empty -> <empty>

Terminals, with rules where they appear

ASSOP                : 62
BREAK                : 56
CASE                 : 105
CBCLOSED             : 14 32 33 51 101 102
CBOPEN               : 14 32 33 51 101 102
COLON                : 105 106
COMMA                : 17 26 36 38 71 97
CONST                : 29 30 31 36 37 65 67 105
DECR                 : 82 83
DEFAULT              : 106
DIVIDE               : 77
ELSE                 : 89
EQUALS               : 30 31 32 33 61
FOR                  : 96
ID                   : 10 12 35 61 62 64 66 67 68 68 101 102
IF                   : 88 89
INCR                 : 80 81
LENG_MODIFIER        : 43 44 45
LOGOP                : 90
MINUS                : 31 76 85
MOD                  : 79
PLUS                 : 75 86
RBCLOSED             : 9 10 11 12 66 84 88 89 91 95 96 101 102
RBOPEN               : 9 10 11 12 66 84 88 89 91 95 96 101 102
RELOP                : 94
RETURN               : 99 100
SBCLOSED             : 21 29 32 33 67 68
SBOPEN               : 21 29 32 33 67 68
SEMICOLON            : 13 24 25 52 56 57 60 96 96
SIGN_MODIFIER        : 42 44
STORAGE_SPEC         : 11 12 25
STRINGCONST          : 38 39 74
SWITCH               : 101 102
TIMES                : 34 78
TYPE                 : 42 43 44 46
VOID                 : 40
WHILE                : 95
error                : 
nl                   : 
ws                   : 

Nonterminals, with rules where they appear

arg                  : 71 72
arg_list             : 66
args                 : 69 71
assign_stmt          : 52 97 98
block                : 55
case_list            : 101 102 103
case_stmt            : 103 104
comparison           : 92
cond                 : 88 89 90 90 91 95 96
const_list           : 32 36
dec_prot             : 3 4
dec_prot_list        : 1 3
decl                 : 5 22 23
decl_list            : 16 23
default_stmt         : 102
empty                : 15 41 48 70
expr                 : 61 62 63 75 75 76 76 77 77 78 78 79 79 80 81 82 83 84 85 86 93 94 94 99
expr_list            : 96 96 97
for_stmt             : 58
function             : 7 8
function_body        : 14
function_decl        : 13 14
function_list        : 1 2 8
function_prot        : 6
id_list              : 24 25 26
ident                : 26 27
if_stmt              : 53
parameter            : 17 18
parameter_list       : 9 10 11 12 17
pointer              : 9 11 20 21 28 29 30 31 32 33 34
prog_ok              : 0
return_stmt          : 57
stmt                 : 49 50 88 89 89 95 96
stmt_list            : 16 51 105 106
stmts                : 47 49
string_const_list    : 33 38
switch_stmt          : 59
term                 : 73 87
type                 : 9 11 20 21 24 25
void                 : 10 12 19
while_stmt           : 54

Parsing method: LALR

state 0

    (0) S' -> . prog_ok
    (1) prog_ok -> . dec_prot_list function_list
    (2) prog_ok -> . function_list
    (3) dec_prot_list -> . dec_prot_list dec_prot
    (4) dec_prot_list -> . dec_prot
    (7) function_list -> . function
    (8) function_list -> . function_list function
    (5) dec_prot -> . decl
    (6) dec_prot -> . function_prot
    (14) function -> . function_decl CBOPEN function_body CBCLOSED
    (24) decl -> . type id_list SEMICOLON
    (25) decl -> . STORAGE_SPEC type id_list SEMICOLON
    (13) function_prot -> . function_decl SEMICOLON
    (9) function_decl -> . type pointer RBOPEN parameter_list RBCLOSED
    (10) function_decl -> . void ID RBOPEN parameter_list RBCLOSED
    (11) function_decl -> . STORAGE_SPEC type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> . STORAGE_SPEC void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    STORAGE_SPEC    shift and go to state 10
    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    prog_ok                        shift and go to state 1
    dec_prot_list                  shift and go to state 2
    function_list                  shift and go to state 3
    dec_prot                       shift and go to state 4
    function                       shift and go to state 5
    decl                           shift and go to state 6
    function_prot                  shift and go to state 7
    function_decl                  shift and go to state 8
    type                           shift and go to state 9
    void                           shift and go to state 11
    empty                          shift and go to state 16

state 1

    (0) S' -> prog_ok .



state 2

    (1) prog_ok -> dec_prot_list . function_list
    (3) dec_prot_list -> dec_prot_list . dec_prot
    (7) function_list -> . function
    (8) function_list -> . function_list function
    (5) dec_prot -> . decl
    (6) dec_prot -> . function_prot
    (14) function -> . function_decl CBOPEN function_body CBCLOSED
    (24) decl -> . type id_list SEMICOLON
    (25) decl -> . STORAGE_SPEC type id_list SEMICOLON
    (13) function_prot -> . function_decl SEMICOLON
    (9) function_decl -> . type pointer RBOPEN parameter_list RBCLOSED
    (10) function_decl -> . void ID RBOPEN parameter_list RBCLOSED
    (11) function_decl -> . STORAGE_SPEC type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> . STORAGE_SPEC void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    STORAGE_SPEC    shift and go to state 10
    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    function_list                  shift and go to state 17
    dec_prot                       shift and go to state 18
    function                       shift and go to state 5
    decl                           shift and go to state 6
    function_prot                  shift and go to state 7
    function_decl                  shift and go to state 8
    type                           shift and go to state 9
    void                           shift and go to state 11
    empty                          shift and go to state 16

state 3

    (2) prog_ok -> function_list .
    (8) function_list -> function_list . function
    (14) function -> . function_decl CBOPEN function_body CBCLOSED
    (9) function_decl -> . type pointer RBOPEN parameter_list RBCLOSED
    (10) function_decl -> . void ID RBOPEN parameter_list RBCLOSED
    (11) function_decl -> . STORAGE_SPEC type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> . STORAGE_SPEC void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    $end            reduce using rule 2 (prog_ok -> function_list .)
    STORAGE_SPEC    shift and go to state 22
    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    function                       shift and go to state 19
    function_decl                  shift and go to state 20
    type                           shift and go to state 21
    void                           shift and go to state 11
    empty                          shift and go to state 16

state 4

    (4) dec_prot_list -> dec_prot .

    STORAGE_SPEC    reduce using rule 4 (dec_prot_list -> dec_prot .)
    SIGN_MODIFIER   reduce using rule 4 (dec_prot_list -> dec_prot .)
    LENG_MODIFIER   reduce using rule 4 (dec_prot_list -> dec_prot .)
    TYPE            reduce using rule 4 (dec_prot_list -> dec_prot .)
    VOID            reduce using rule 4 (dec_prot_list -> dec_prot .)
    ID              reduce using rule 4 (dec_prot_list -> dec_prot .)


state 5

    (7) function_list -> function .

    STORAGE_SPEC    reduce using rule 7 (function_list -> function .)
    SIGN_MODIFIER   reduce using rule 7 (function_list -> function .)
    LENG_MODIFIER   reduce using rule 7 (function_list -> function .)
    TYPE            reduce using rule 7 (function_list -> function .)
    VOID            reduce using rule 7 (function_list -> function .)
    ID              reduce using rule 7 (function_list -> function .)
    $end            reduce using rule 7 (function_list -> function .)


state 6

    (5) dec_prot -> decl .

    STORAGE_SPEC    reduce using rule 5 (dec_prot -> decl .)
    SIGN_MODIFIER   reduce using rule 5 (dec_prot -> decl .)
    LENG_MODIFIER   reduce using rule 5 (dec_prot -> decl .)
    TYPE            reduce using rule 5 (dec_prot -> decl .)
    VOID            reduce using rule 5 (dec_prot -> decl .)
    ID              reduce using rule 5 (dec_prot -> decl .)


state 7

    (6) dec_prot -> function_prot .

    STORAGE_SPEC    reduce using rule 6 (dec_prot -> function_prot .)
    SIGN_MODIFIER   reduce using rule 6 (dec_prot -> function_prot .)
    LENG_MODIFIER   reduce using rule 6 (dec_prot -> function_prot .)
    TYPE            reduce using rule 6 (dec_prot -> function_prot .)
    VOID            reduce using rule 6 (dec_prot -> function_prot .)
    ID              reduce using rule 6 (dec_prot -> function_prot .)


state 8

    (14) function -> function_decl . CBOPEN function_body CBCLOSED
    (13) function_prot -> function_decl . SEMICOLON

    CBOPEN          shift and go to state 23
    SEMICOLON       shift and go to state 24


state 9

    (24) decl -> type . id_list SEMICOLON
    (9) function_decl -> type . pointer RBOPEN parameter_list RBCLOSED
    (26) id_list -> . id_list COMMA ident
    (27) id_list -> . ident
    (34) pointer -> . TIMES pointer
    (35) pointer -> . ID
    (28) ident -> . pointer
    (29) ident -> . pointer SBOPEN CONST SBCLOSED
    (30) ident -> . pointer EQUALS CONST
    (31) ident -> . pointer EQUALS MINUS CONST
    (32) ident -> . pointer SBOPEN SBCLOSED EQUALS CBOPEN const_list CBCLOSED
    (33) ident -> . pointer SBOPEN SBCLOSED EQUALS CBOPEN string_const_list CBCLOSED

    TIMES           shift and go to state 28
    ID              shift and go to state 29

    id_list                        shift and go to state 25
    pointer                        shift and go to state 26
    ident                          shift and go to state 27

state 10

    (25) decl -> STORAGE_SPEC . type id_list SEMICOLON
    (11) function_decl -> STORAGE_SPEC . type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> STORAGE_SPEC . void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    type                           shift and go to state 30
    void                           shift and go to state 31
    empty                          shift and go to state 16

state 11

    (10) function_decl -> void . ID RBOPEN parameter_list RBCLOSED

    ID              shift and go to state 32


state 12

    (42) type -> SIGN_MODIFIER . TYPE
    (44) type -> SIGN_MODIFIER . LENG_MODIFIER TYPE

    TYPE            shift and go to state 33
    LENG_MODIFIER   shift and go to state 34


state 13

    (46) type -> TYPE .

    TIMES           reduce using rule 46 (type -> TYPE .)
    ID              reduce using rule 46 (type -> TYPE .)


state 14

    (43) type -> LENG_MODIFIER . TYPE
    (45) type -> LENG_MODIFIER .

    TYPE            shift and go to state 35
    TIMES           reduce using rule 45 (type -> LENG_MODIFIER .)
    ID              reduce using rule 45 (type -> LENG_MODIFIER .)


state 15

    (40) void -> VOID .

    ID              reduce using rule 40 (void -> VOID .)
    RBCLOSED        reduce using rule 40 (void -> VOID .)
    COMMA           reduce using rule 40 (void -> VOID .)


state 16

    (41) void -> empty .

    ID              reduce using rule 41 (void -> empty .)
    RBCLOSED        reduce using rule 41 (void -> empty .)
    COMMA           reduce using rule 41 (void -> empty .)


state 17

    (1) prog_ok -> dec_prot_list function_list .
    (8) function_list -> function_list . function
    (14) function -> . function_decl CBOPEN function_body CBCLOSED
    (9) function_decl -> . type pointer RBOPEN parameter_list RBCLOSED
    (10) function_decl -> . void ID RBOPEN parameter_list RBCLOSED
    (11) function_decl -> . STORAGE_SPEC type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> . STORAGE_SPEC void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    $end            reduce using rule 1 (prog_ok -> dec_prot_list function_list .)
    STORAGE_SPEC    shift and go to state 22
    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    function                       shift and go to state 19
    function_decl                  shift and go to state 20
    type                           shift and go to state 21
    void                           shift and go to state 11
    empty                          shift and go to state 16

state 18

    (3) dec_prot_list -> dec_prot_list dec_prot .

    STORAGE_SPEC    reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)
    SIGN_MODIFIER   reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)
    LENG_MODIFIER   reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)
    TYPE            reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)
    VOID            reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)
    ID              reduce using rule 3 (dec_prot_list -> dec_prot_list dec_prot .)


state 19

    (8) function_list -> function_list function .

    STORAGE_SPEC    reduce using rule 8 (function_list -> function_list function .)
    SIGN_MODIFIER   reduce using rule 8 (function_list -> function_list function .)
    LENG_MODIFIER   reduce using rule 8 (function_list -> function_list function .)
    TYPE            reduce using rule 8 (function_list -> function_list function .)
    VOID            reduce using rule 8 (function_list -> function_list function .)
    ID              reduce using rule 8 (function_list -> function_list function .)
    $end            reduce using rule 8 (function_list -> function_list function .)


state 20

    (14) function -> function_decl . CBOPEN function_body CBCLOSED

    CBOPEN          shift and go to state 23


state 21

    (9) function_decl -> type . pointer RBOPEN parameter_list RBCLOSED
    (34) pointer -> . TIMES pointer
    (35) pointer -> . ID

    TIMES           shift and go to state 28
    ID              shift and go to state 29

    pointer                        shift and go to state 36

state 22

    (11) function_decl -> STORAGE_SPEC . type pointer RBOPEN parameter_list RBCLOSED
    (12) function_decl -> STORAGE_SPEC . void ID RBOPEN parameter_list RBCLOSED
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE
    (40) void -> . VOID
    (41) void -> . empty
    (107) empty -> .

    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13
    VOID            shift and go to state 15
    ID              reduce using rule 107 (empty -> .)

    type                           shift and go to state 37
    void                           shift and go to state 31
    empty                          shift and go to state 16

state 23

    (14) function -> function_decl CBOPEN . function_body CBCLOSED
    (15) function_body -> . empty
    (16) function_body -> . decl_list stmt_list
    (107) empty -> .
    (22) decl_list -> . decl
    (23) decl_list -> . decl_list decl
    (24) decl -> . type id_list SEMICOLON
    (25) decl -> . STORAGE_SPEC type id_list SEMICOLON
    (42) type -> . SIGN_MODIFIER TYPE
    (43) type -> . LENG_MODIFIER TYPE
    (44) type -> . SIGN_MODIFIER LENG_MODIFIER TYPE
    (45) type -> . LENG_MODIFIER
    (46) type -> . TYPE

    CBCLOSED        reduce using rule 107 (empty -> .)
    STORAGE_SPEC    shift and go to state 43
    SIGN_MODIFIER   shift and go to state 12
    LENG_MODIFIER   shift and go to state 14
    TYPE            shift and go to state 13

    function_body                  shift and go to state 38
    empty                          shift and go to state 39
    decl_list                      shift and go to state 40
    decl                           shift and go to state 41
    type                           shift and go to state 42

state 24

    (13) function_prot -> function_decl SEMICOLON .

    STORAGE_SPEC    reduce using rule 13 (function_prot -> function_decl SEMICOLON .)
    SIGN_MODIFIER   reduce using rule 13 (function_prot -> function_decl SEMICOLON .)
    LENG_MODIFIER   reduce using rule 13 (function_prot -> function_decl SEMICOLON .)
    TYPE            reduce using rule 13 (function_prot -> function_decl SEMICOLON .)
    VOID            reduce using rule 13 (function_prot -> function_decl SEMICOLON .)
    ID              reduce using rule 13 (function_prot -> function_decl SEMICOLON .)


state 25

    (24) decl -> type id_list . SEMICOLON
    (26) id_list -> id_list . COMMA ident

    SEMICOLON       shift and go to state 44
    COMMA           shift and go to state 45


state 26

    (9) function_decl -> type pointer . RBOPEN parameter_list RBCLOSED
    (28) ident -> pointer .
    (29) ident -> pointer . SBOPEN CONST SBCLOSED
    (30) ident -> pointer . EQUALS CONST
    (31) ident -> pointer . EQUALS MINUS CONST
    (32) ident -> pointer . SBOPEN SBCLOSED EQUALS CBOPEN const_list CBCLOSED
    (33) ident -> pointer . SBOPEN SBCLOSED EQUALS CBOPEN string_const_list CBCLOSED

    RBOPEN          shift and go to state 46
    SEMICOLON       reduce using rule 28 (ident -> pointer .)
    COMMA           reduce using rule 28 (ident -> pointer .)
    SBOPEN          shift and go to state 47
    EQUALS          shift and go to state 48


state 27

    (27) id_list -> ident .

    SEMICOLON       reduce using rule 27 (id_list -> ident .)
    COMMA           reduce using rule 27 (id_list -> ident .)


state 28

    (34) pointer -> TIMES . pointer
    (34) pointer -> . TIMES pointer
    (35) pointer -> . ID

    TIMES           shift and go to state 28
    ID              shift and go to state 29

    pointer                        shift and go to state 49

state 29

    (35) pointer -> ID .

    RBOPEN          reduce using rule 35 (pointer -> ID .)
    SBOPEN          reduce using rule 35 (pointer -> ID .)
    EQUALS          reduce using rule 35 (pointer -> ID .)
    SEMICOLON       reduce using rule 35 (pointer -> ID .)
    COMMA           reduce using rule 35 (pointer -> ID .)
    RBCLOSED        reduce using rule 35 (pointer -> ID .)


state 30

    (25) decl -> STORAGE_SPEC type . id_list SEMICOLON
    (11) function_decl -> STORAGE_SPEC type . pointer RBOPEN parameter_list RBCLOSED
    (26) id_list -> . id_list COMMA ident
    (27) id_list -> . ident
    (34) pointer -> . TIMES pointer
    (35) pointer -> . ID
    (28) ident -> . pointer
    (29) ident -> . pointer SBOPEN CONST SBCLOSED
    (30) ident -> . pointer EQUALS CONST
    (31) ident -> . pointer EQUALS MINUS CONST
    (32) ident -> . pointer SBOPEN SBCLOSED EQUALS CBOPEN const_list CBCLOSED
    (33) ident -> . pointer SBOPEN SBCLOSED EQUALS CBOPEN string_const_list CBCLOSED

    TIMES           shift and go to state 28
    ID              shift and go to state 29

    id_list                        shift and go to state 50
    pointer                        shift and go to state 51
    ident                          shift and go to state 27

state 31

    (12) function_decl -> STORAGE_SPEC void . ID RBOPEN parameter_list RBCLOSED

    ID              shift and go to state 52


state 32

    (10) function_decl -> void ID . RBOPEN parameter_list RBCLOSED

    RBOPEN          shift and go to state 53


state 33

    (42) type -> SIGN_MODIFIER TYPE .

    TIMES           reduce using rule 42 (type -> SIGN_MODIFIER TYPE .)
    ID              reduce using rule 42 (type -> SIGN_MODIFIER TYPE .)


state 34

    (44) type -> SIGN_MODIFIER LENG_MODIFIER . TYPE

    TYPE            shift and go to state 54


state 35
